# ml-python-lab

./: .gitignore  README.md  requirements.txt
iris/: rosowski_iris.ipynb
obraz/: animal_recogn copy.ipynb
panda/: rosowski_pandas.ipynb
predict/: pred.ipynb
regex/: pyproject.toml  text.txt  util.py  z1.py  z2.py  z3.py  z4.py  z5.py
scikit/: 17_11_scikit-learn-exercises.ipynb
scrape/async_scraping/: async_scraper.py  pyproject.toml
scrape/scraping/: pyproject.toml  scraper.py
titanic/: Rosowski_tytanik.ipynb
