[tool.poetry]
name = "async-scraping"
version = "0.1.0"
description = ""
authors = ["Mikołaj Rosowski <m.rosowski1@wp.pl>"]
readme = "README.md"
packages = [{include = "async_scraping"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
httpx = "^0.23.0"
lxml = "^4.9.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
