[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["Mikołaj Rosowski <m.rosowski1@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
isort = "^5.10.1"
black = "^22.10.0"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
